Fix Accordion on small devices

--- a/src/scss/text_page.scss
+++ b/src/scss/text_page.scss
@@ -173,6 +173,9 @@
             text-decoration: none;
             margin: 0 0 0 40px;
             padding: 0;
+            @media (max-width: 575.98px) {
+              font-size: 16px;
+            }
           }
         }
 
